--- a/.github/workflows/release-module.yml
+++ b/.github/workflows/release-module.yml
@@ -7,8 +7,17 @@ on:
         description: 'Where we are going to release now'
         type: choice
         options:
-        - github
-        - firebase
+          - firebase
+          - github
+      release_version:
+        required: false
+        default: ''
+        description: 'Set release version explicitly'
+      commit_version:
+        description: 'Save incremented version after build'
+        required: false
+        type: boolean
+        default: true
 
 env:
   MODULE_NAME_KEY: 'name'
@@ -25,6 +34,36 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.0.0
 
+      - name: Increment version
+        if: ${{ inputs.release_version == '' }}
+        run: |
+          cat > update_version.py << EOF
+          import json
+          package_data = json.load(open('package.json', 'r'))
+          version = package_data['${{ env.MODULE_VERSION_KEY }}']
+          parsed = list(map(int, version.split('.')))
+          parsed[-1] += 1
+          package_data['${{ env.MODULE_VERSION_KEY }}'] = '.'.join(map(str, parsed))
+          json.dump(package_data, open('package.json', 'w'), indent=2)
+          print(package_data['${{ env.MODULE_VERSION_KEY }}'])
+          EOF
+          python3 update_version.py
+          rm -f update_version.py
+
+      - name: Set explicit version
+        if: ${{ inputs.release_version != '' }}
+        run: |
+          cat > update_version.py << EOF
+          import json
+          package_data = json.load(open('package.json', 'r'))
+          version = package_data['${{ env.MODULE_VERSION_KEY }}']
+          package_data['${{ env.MODULE_VERSION_KEY }}'] = '${{ inputs.release_version }}'
+          json.dump(package_data, open('package.json', 'w'))
+          print(package_data['${{ env.MODULE_VERSION_KEY }}'])
+          EOF
+          python3 update_version.py
+          rm -f update_version.py
+
       - name: Load Module Meta
         id: module_meta
         run: |
@@ -36,7 +75,7 @@ jobs:
           
           export MODULE_SUBSCRIPTION=$(python3 -c "import json; print(json.load(open('package.json', 'r')).get('${{ env.MODULE_SUBSCRIPTIONS_KEY }}', ['${{ env.MODULE_DEFAULT_SUBSCRIPTION }}'])[0])")
           echo "MODULE_SUBSCRIPTION=$MODULE_SUBSCRIPTION" >> "$GITHUB_OUTPUT"
-          
+
       - name: Node 16 setup
         uses: actions/setup-node@v3
         with:
@@ -47,7 +86,7 @@ jobs:
           npm i
           npm i -g @electron/asar
           asar pack . "${{ steps.module_meta.outputs.MODULE_NAME }}.asar"
-          
+
       - name: Upload artifact
         # https://github.com/actions/upload-artifact
         uses: actions/upload-artifact@v3.1.3
@@ -56,7 +95,7 @@ jobs:
           path: "${{ steps.module_meta.outputs.MODULE_NAME }}.asar"
           retention-days: 1
           if-no-files-found: error
-        
+
       - name: Upload package.json
         # https://github.com/actions/upload-artifact
         uses: actions/upload-artifact@v3.1.3
@@ -65,6 +104,30 @@ jobs:
           path: "package.json"
           retention-days: 1
           if-no-files-found: error
+
+      - name: Commit files
+        if: ${{ inputs.commit_version }}
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Incremented version"
+
+      - name: GitHub Push
+        id: github_push
+        if: ${{ inputs.commit_version }}
+        continue-on-error: true
+        uses: ad-m/github-push-action@v0.8.0
+
+      - name: GitHub pull request
+        if: ${{ inputs.commit_version }} && ( failure() && steps.github_push.outcome == 'failure' )
+        # https://github.com/marketplace/actions/create-pull-request
+        uses: peter-evans/create-pull-request@v5.0.2
+        with:
+          title: "Version increment"
+          body: "New version: ${{ steps.module_meta.outputs.MODULE_VERSION }} \ Triggered by: ${{ github.actor }}"
+          commit-message: "Incremented version"
+          branch: "version_increment/${{ steps.module_meta.outputs.MODULE_VERSION }}"
+          add-paths: "./package.json"
 
     outputs:
       MODULE_NAME: ${{ steps.module_meta.outputs.MODULE_NAME }}
@@ -75,21 +138,21 @@ jobs:
 
 
   release_github:
-     if: ${{ inputs.release_type == 'github' }}
-     needs: build
-     runs-on: ubuntu-latest
-     steps:
-       - name: Download Artifact
-         uses: actions/download-artifact@v3.0.2
-         with:
-           name: ${{ needs.build.outputs.ARTIFACT_NAME }}
-            
-       - name: GH Release
-         uses: softprops/action-gh-release@v1
-         with:
-           tag_name: ${{ needs.build.outputs.MODULE_VERSION }}
-           files: "${{ needs.build.outputs.MODULE_NAME }}.asar"
-           generate_release_notes: true
+    if: ${{ inputs.release_type == 'github' }}
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3.0.2
+        with:
+          name: ${{ needs.build.outputs.ARTIFACT_NAME }}
+
+      - name: GH Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ needs.build.outputs.MODULE_VERSION }}
+          files: "${{ needs.build.outputs.MODULE_NAME }}.asar"
+          generate_release_notes: true
 
   release_firebase:
     if: ${{ inputs.release_type == 'firebase' }}
@@ -134,7 +197,7 @@ jobs:
         uses: actions/download-artifact@v3.0.2
         with:
           name: "package.json"
-          
+
       - name: Prepare update_firestore.py
         run: |
           cat > update_firestore.py << EOF
@@ -169,7 +232,7 @@ jobs:
           
               if deleted >= batch_size:
                   return delete_collection(coll_ref, batch_size)
-              
+          
           delete_collection(db.collection(cache_collection_name))
           print(f'Collection {cache_collection_name} cleared')
           print('Done', 'update_firestore')
